[gd_scene load_steps=44 format=3 uid="uid://c175jf4ds1chx"]

[ext_resource type="Script" path="res://tank.gd" id="1_q2ff1"]
[ext_resource type="Script" path="res://main.gd" id="1_rauu0"]
[ext_resource type="Texture2D" uid="uid://chd1smjh0dkgi" path="res://art/tanks/demo.png" id="1_ur807"]
[ext_resource type="PackedScene" uid="uid://c343ujjd7uavt" path="res://fish.tscn" id="2_am8qu"]
[ext_resource type="Texture2D" uid="uid://3qttc4rgjmdp" path="res://art/ui/coin.png" id="5_gm5n3"]
[ext_resource type="Theme" uid="uid://ydbe81qfcfi3" path="res://theme.tres" id="7_njjdw"]
[ext_resource type="Texture2D" uid="uid://b1q7gmfd80ql6" path="res://art/ui/dialog.png" id="8_d01k8"]
[ext_resource type="Theme" uid="uid://d14ayvl6gndqm" path="res://themes/tooltip_theme.tres" id="8_pmiyt"]
[ext_resource type="Texture2D" uid="uid://b40m7gocdcrke" path="res://art/ui/shop.png" id="9_qmnaw"]
[ext_resource type="Script" path="res://shop.gd" id="10_0uksf"]
[ext_resource type="Theme" uid="uid://dslw584p0c8fd" path="res://themes/shop-buttons.tres" id="12_gm4d3"]
[ext_resource type="Texture2D" uid="uid://bxfa5xs6r1dyj" path="res://art/ui/shop-indent.png" id="13_h8d08"]
[ext_resource type="Texture2D" uid="uid://bw045gyko1l3n" path="res://art/ui/dialog-blue.png" id="14_fl8mk"]
[ext_resource type="FontFile" uid="uid://d4k08oh6csnbf" path="res://art/fonts/04B03.ttf" id="15_fg7uf"]
[ext_resource type="Texture2D" uid="uid://dytm85cltfqg" path="res://art/ui/indent-blue.png" id="15_omj1t"]
[ext_resource type="Script" path="res://scripts/fish-info.gd" id="15_vjgyl"]
[ext_resource type="Texture2D" uid="uid://dwiin8waxr75u" path="res://art/ui/xp-bar-empty.png" id="16_8b1ff"]
[ext_resource type="FontFile" uid="uid://b24ts2555dqqf" path="res://art/fonts/pixhobo.ttf" id="16_txocg"]
[ext_resource type="Texture2D" uid="uid://diyrk41vmwcq" path="res://art/ui/hunger-bar-empty.png" id="18_ote10"]
[ext_resource type="Texture2D" uid="uid://dnr1ogjya0ww8" path="res://art/ui/xp-bar-full.png" id="18_pwm8v"]
[ext_resource type="Texture2D" uid="uid://dk3rpjklbldgv" path="res://art/ui/hunger-bar-full.png" id="19_2q1i4"]
[ext_resource type="Texture2D" uid="uid://bq3b5aw1ebkm1" path="res://art/ui/close.png" id="20_yts4y"]
[ext_resource type="Texture2D" uid="uid://dj44nubpby3xc" path="res://art/ui/close-down.png" id="21_sey11"]
[ext_resource type="Texture2D" uid="uid://dwajr5jv00bs2" path="res://art/ui/close-hover.png" id="22_i3grg"]
[ext_resource type="Texture2D" uid="uid://cnjrgmhvvjiih" path="res://art/fish/carp.png" id="23_hmng7"]
[ext_resource type="AudioStream" uid="uid://bbjyy6gw0ayw3" path="res://sound/somethin-fishy.ogg" id="26_7swpp"]
[ext_resource type="AudioStream" uid="uid://c6t2salp1stmo" path="res://sound/level-up.wav" id="26_ksoml"]
[ext_resource type="AudioStream" uid="uid://tnk737dot0pt" path="res://sound/fish-bloop.wav" id="27_l78wf"]
[ext_resource type="AudioStream" uid="uid://bih48in13e4uj" path="res://sound/kaching.ogg" id="27_ml0hy"]
[ext_resource type="AudioStream" uid="uid://vona4tol1f0r" path="res://sound/coin-collect.wav" id="28_5jqr6"]
[ext_resource type="AudioStream" uid="uid://y2wvcikahqgp" path="res://sound/fish-eat.ogg" id="30_e2xhv"]
[ext_resource type="AudioStream" uid="uid://utyqqfrmq05g" path="res://sound/open-menu.wav" id="31_dr106"]
[ext_resource type="AudioStream" uid="uid://cwegjadoqdglc" path="res://sound/close-menu.wav" id="32_eqthy"]
[ext_resource type="AudioStream" uid="uid://cuiqctqpaf5ag" path="res://sound/no-no.ogg" id="32_m7gsi"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gsbav"]
normal = Vector2(1, 0)
distance = 0.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_65aca"]
normal = Vector2(-1, 0)
distance = -479.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8dguh"]
normal = Vector2(0, 1)
distance = 0.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qlkg4"]
distance = -269.5

[sub_resource type="Theme" id="Theme_5vd60"]
Label/colors/font_color = Color(0.815686, 0.254902, 0.32549, 1)
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("15_fg7uf")

[sub_resource type="Theme" id="Theme_b7yg1"]
Label/colors/font_color = Color(0.945098, 0.545098, 0.411765, 1)
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("15_fg7uf")

[sub_resource type="Theme" id="Theme_320sv"]
Label/colors/font_color = Color(0.286275, 0.333333, 0.533333, 1)
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("15_fg7uf")

[sub_resource type="Theme" id="Theme_v3nll"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("15_fg7uf")

[sub_resource type="Theme" id="Theme_vxyf1"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0.286275, 0.333333, 0.533333, 1)
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 0
Label/font_sizes/font_size = 13
Label/fonts/font = ExtResource("16_txocg")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rauu0")
metadata/_edit_vertical_guides_ = [-82.0, 560.0, -76.0, -12.0]

[node name="Tank" type="Node2D" parent="."]
script = ExtResource("1_q2ff1")

[node name="Collisions" type="Node2D" parent="Tank"]

[node name="LeftWall" type="StaticBody2D" parent="Tank/Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/Collisions/LeftWall"]
shape = SubResource("WorldBoundaryShape2D_gsbav")

[node name="RightWall" type="StaticBody2D" parent="Tank/Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/Collisions/RightWall"]
shape = SubResource("WorldBoundaryShape2D_65aca")

[node name="TopWall" type="StaticBody2D" parent="Tank/Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/Collisions/TopWall"]
shape = SubResource("WorldBoundaryShape2D_8dguh")

[node name="BottomWall" type="StaticBody2D" parent="Tank/Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/Collisions/BottomWall"]
shape = SubResource("WorldBoundaryShape2D_qlkg4")

[node name="BG" type="Sprite2D" parent="Tank"]
texture = ExtResource("1_ur807")
centered = false

[node name="Food" type="Node2D" parent="."]

[node name="Fish" parent="." instance=ExtResource("2_am8qu")]

[node name="UI" type="Node2D" parent="."]
z_index = 50

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(414, 12)
texture = ExtResource("5_gm5n3")

[node name="Sprite2D2" type="Sprite2D" parent="UI"]
position = Vector2(414, 12)
texture = ExtResource("5_gm5n3")

[node name="Money" type="Label" parent="UI"]
offset_left = 427.0
offset_right = 475.0
offset_bottom = 23.0
theme = ExtResource("7_njjdw")
text = "XXXX
"

[node name="ShopButton" type="TextureButton" parent="UI"]
offset_left = 446.0
offset_top = 237.0
offset_right = 476.0
offset_bottom = 266.0
tooltip_text = "Open Shop"
mouse_default_cursor_shape = 2
theme = ExtResource("8_pmiyt")
texture_normal = ExtResource("9_qmnaw")

[node name="Shop" type="NinePatchRect" parent="UI"]
offset_left = 480.0
offset_top = 27.0
offset_right = 579.0
offset_bottom = 236.0
texture = ExtResource("8_d01k8")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("10_0uksf")

[node name="BuyCurrentItemButton" type="Button" parent="UI/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 89.0
offset_right = 75.0
offset_bottom = 127.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("12_gm4d3")
text = "$XXX"

[node name="UpgradeTankButton" type="Button" parent="UI/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 153.0
offset_right = 75.0
offset_bottom = 191.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("12_gm4d3")
text = "$XXX"

[node name="TitleLabel" type="Label" parent="UI/Shop"]
layout_mode = 0
offset_left = 22.0
offset_top = 8.0
offset_right = 70.0
offset_bottom = 31.0
theme = ExtResource("7_njjdw")
text = "Shop"

[node name="ItemBg" type="NinePatchRect" parent="UI/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 48.0
offset_right = 75.0
offset_bottom = 86.0
mouse_filter = 1
texture = ExtResource("13_h8d08")
region_rect = Rect2(0, 0, 10, 10)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="CurrentItemTexture" type="Sprite2D" parent="UI/Shop"]
position = Vector2(42, 68)

[node name="UpgradeTankLevel" type="Label" parent="UI/Shop"]
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 78.0
offset_bottom = 152.0
theme = SubResource("Theme_5vd60")
text = "Max Fish: X"
horizontal_alignment = 1

[node name="CurrentItemName" type="Label" parent="UI/Shop"]
layout_mode = 0
offset_left = 8.0
offset_top = 38.0
offset_right = 78.0
offset_bottom = 46.0
theme = SubResource("Theme_5vd60")
text = "CURRENT ITEM"
horizontal_alignment = 1

[node name="RefreshCountdown" type="Label" parent="UI/Shop"]
layout_mode = 0
offset_left = 17.0
offset_top = 77.0
offset_right = 73.0
offset_bottom = 85.0
theme = SubResource("Theme_b7yg1")
text = "0"
horizontal_alignment = 2

[node name="FishInfo" type="NinePatchRect" parent="UI"]
offset_left = -99.0
offset_top = 27.0
offset_right = -1.0
offset_bottom = 237.0
texture = ExtResource("14_fl8mk")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("15_vjgyl")

[node name="FishBg" type="NinePatchRect" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 20.0
offset_right = 87.0
offset_bottom = 58.0
mouse_filter = 1
texture = ExtResource("15_omj1t")
region_rect = Rect2(0, 0, 10, 10)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FishName" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 90.0
offset_bottom = 19.0
theme = SubResource("Theme_320sv")
text = "FISH NAME"
horizontal_alignment = 1

[node name="FishSpecies" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 20.0
offset_top = 61.0
offset_right = 90.0
offset_bottom = 69.0
theme = SubResource("Theme_320sv")
text = "FISH SPECIES"
horizontal_alignment = 1

[node name="FishSpecies" type="Label" parent="UI/FishInfo/FishSpecies"]
layout_mode = 0
offset_left = 4.0
offset_top = 14.0
offset_right = 74.0
offset_bottom = 22.0
theme = SubResource("Theme_320sv")
text = "HUNGER:"

[node name="Age" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 20.0
offset_top = 150.0
offset_right = 90.0
offset_bottom = 158.0
theme = SubResource("Theme_320sv")
text = "Age: 0 Days"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 120.0
offset_right = 35.0
offset_bottom = 128.0
theme = SubResource("Theme_320sv")
text = "XP:
"

[node name="XPNeeded" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 137.0
offset_right = 87.0
offset_bottom = 145.0
theme = SubResource("Theme_320sv")
text = "/ 999,999"
horizontal_alignment = 2

[node name="XPCurrent" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 36.0
offset_top = 120.0
offset_right = 87.0
offset_bottom = 128.0
theme = SubResource("Theme_v3nll")
text = "999,999
"
horizontal_alignment = 2

[node name="TitleLabel" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = -63.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = 31.0
theme = ExtResource("7_njjdw")
text = "Fish"

[node name="FishLevel" type="Label" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 17.0
offset_top = 97.0
offset_right = 93.0
offset_bottom = 120.0
theme = SubResource("Theme_vxyf1")
text = "lv. 0"
horizontal_alignment = 1

[node name="HungerBar" type="TextureProgressBar" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 82.0
offset_right = 87.0
offset_bottom = 92.0
tooltip_text = "50%"
theme = ExtResource("8_pmiyt")
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("18_ote10")
texture_progress = ExtResource("19_2q1i4")

[node name="XPBar" type="TextureProgressBar" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 23.0
offset_top = 127.0
offset_right = 87.0
offset_bottom = 137.0
tooltip_text = "50%"
theme = ExtResource("8_pmiyt")
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("16_8b1ff")
texture_progress = ExtResource("18_pwm8v")

[node name="CloseButton" type="TextureButton" parent="UI/FishInfo"]
layout_mode = 0
offset_left = 18.0
offset_top = 212.0
offset_right = 48.0
offset_bottom = 241.0
tooltip_text = "Hide Fish Info"
mouse_default_cursor_shape = 2
theme = ExtResource("8_pmiyt")
texture_normal = ExtResource("20_yts4y")
texture_pressed = ExtResource("21_sey11")
texture_hover = ExtResource("22_i3grg")
flip_h = true

[node name="SellButton" type="Button" parent="UI/FishInfo"]
layout_mode = 0
offset_left = -87.0
offset_top = 161.0
offset_right = -23.0
offset_bottom = 199.0
tooltip_text = "Sell this fish"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("12_gm4d3")
text = "SELL"

[node name="FishTexture" type="Sprite2D" parent="UI/FishInfo"]
position = Vector2(54, 39)
texture = ExtResource("23_hmng7")

[node name="DebugText" type="Label" parent="UI/FishInfo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.251
anchor_bottom = 0.055
offset_left = 101.0
offset_top = -24.0
offset_right = 227.402
offset_bottom = 227.45
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("15_fg7uf")
theme_override_font_sizes/font_size = 8

[node name="Xp-bar-full" type="Sprite2D" parent="."]
position = Vector2(-63, 172)
texture = ExtResource("18_pwm8v")

[node name="Sound" type="Node2D" parent="."]

[node name="LevelUp" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("26_ksoml")
volume_db = -9.75

[node name="BoughtItem" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("27_ml0hy")
volume_db = -9.75

[node name="Music" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("26_7swpp")
autoplay = true

[node name="Bloop" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("27_l78wf")

[node name="Coin" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("28_5jqr6")
volume_db = -5.056

[node name="Eat" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("30_e2xhv")
volume_db = -10.111

[node name="MenuOpen" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("31_dr106")
volume_db = -5.0

[node name="CantBuy" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("32_m7gsi")
volume_db = -20.528

[node name="MenuClose" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("32_eqthy")
volume_db = -5.0

[connection signal="pressed" from="UI/ShopButton" to="UI/Shop" method="_on_shop_button_pressed"]
[connection signal="gui_input" from="UI/Shop/BuyCurrentItemButton" to="UI/Shop" method="_on_buy_current_item_button_gui_input"]
[connection signal="pressed" from="UI/Shop/BuyCurrentItemButton" to="UI/Shop" method="_on_buy_current_item_button_pressed"]
[connection signal="gui_input" from="UI/Shop/UpgradeTankButton" to="UI/Shop" method="_on_upgrade_tank_button_gui_input"]
[connection signal="pressed" from="UI/Shop/UpgradeTankButton" to="UI/Shop" method="_on_upgrade_tank_button_pressed"]
[connection signal="pressed" from="UI/FishInfo/CloseButton" to="UI/FishInfo" method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/FishInfo/SellButton" to="." method="_on_sell_button_pressed"]
